test/mutation_analysis/s0331_verify_preorder_serialization_of_a_binary_tree/hafis/ablation_o3_r50/mutants/2/result.txt
./test/mutation_analysis/s0331_verify_preorder_serialization_of_a_binary_tree/hafis/ablation_o3_r50/mutants/2/Solution.java:23: error: unreachable statement
        return count == 0;
        ^
1 error
